2013-01-25  Ryosuke Niwa  <rniwa@webkit.org>

        Update Anne's email address
        https://bugs.webkit.org/show_bug.cgi?id=107866

        Reviewed by Adam Barth.

        * Scripts/webkitpy/common/config/committers.py:

2013-01-24  Alan Cutter  <alancutter@chromium.org>

        HTTP 500 error between QueueStatusServer and bot(s)
        https://bugs.webkit.org/show_bug.cgi?id=107184

        Reviewed by Adam Barth.

        Removed the use of memcache which was the source of the exception.

        * QueueStatusServer/handlers/updatestatus.py:
        (UpdateStatus.post):
        * QueueStatusServer/model/attachment.py:
        (Attachment):
        (Attachment.summary):

2013-01-24  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r140653.
        http://trac.webkit.org/changeset/140653
        https://bugs.webkit.org/show_bug.cgi?id=107916

        Causes a temp file leak on the bots (Requested by abarth on
        #webkit).

        * DumpRenderTree/chromium/TestShell.cpp:
        (TestShell::resetTestController):

2013-01-24  Eric Seidel  <eric@webkit.org>

        Skip haslanded_unittest.py on systems which do not have interdiff installed
        https://bugs.webkit.org/show_bug.cgi?id=106402

        Unreviewed.

        * Scripts/webkitpy/tool/steps/haslanded_unittest.py:
        (HasLandedTest):

2013-01-24  Ryosuke Niwa  <rniwa@webkit.org>

        Disable the failing webkitpy test for now.

        * Scripts/webkitpy/tool/steps/haslanded_unittest.py:

2013-01-24  Tim 'mithro' Ansell  <mithro@mithis.com>

        Fixing the diff_parser to correctly identify git diffs even with leading comments.
        https://bugs.webkit.org/show_bug.cgi?id=107871

        Reviewed by Eric Seidel.

        * Scripts/webkitpy/common/checkout/diff_parser.py:
        * Scripts/webkitpy/common/checkout/diff_parser_unittest.py:
        * Scripts/webkitpy/tool/steps/haslanded.py:

2013-01-24  James Robinson  <jamesr@chromium.org>
